--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,7 +36,6 @@ main {
 header {
   grid-area: header;
   border-bottom: 2px solid #38bc78;
-  max-width: 120rem;
   padding: 2rem 3.2rem;
   display: flex;
   justify-content: space-between;
@@ -55,7 +54,6 @@ header a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  z-index: 2;
 
   &:hover {
     background-color: #32a96cec;
@@ -108,6 +106,7 @@ aside {
   padding: 1rem 1rem;
   display: block;
   border-radius: 0;
+  z-index: 2;
 }
 .project-btns {
   display: flex;
@@ -162,23 +161,56 @@ aside svg {
 }
 .project-container {
   display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+.project-list {
+  display: flex;
   justify-content: space-between;
   padding: 1.4rem 1.4rem;
   background-color: #2a2a2a;
+  cursor: pointer;
 }
-
 .delete-project {
   display: inline-block;
-  font-size: 1.6rem;
+  font-size: 2.2rem;
   padding: 0 0;
+  box-shadow: none;
 }
 .delete-project:hover {
   color: red;
   background-color: #2a2a2a;
+  cursor: pointer;
 }
 section {
   grid-area: section;
 }
+.main-container {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+h3 {
+  font-size: 3.2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  align-self: stretch;
+}
+.card-section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3.2rem;
+}
+
+.todo-card {
+  width: 30%;
+  background-color: #32a96c;
+  margin-top: 2rem;
+  padding: 2.6rem 3rem;
+  border-radius: 2rem;
+}
+
 .hidden {
   opacity: 0;
 }
